# photo_software

./: .gitignore  Cargo.toml  README.md  build.rs  build_install.rs  build_local.rs
shaders/blend_modes/: color_burn.wgsl  darken_only.wgsl  difference.wgsl  dissolve.wgsl  exclusion.wgsl  hard_light.wgsl  hue.wgsl  lighten_only.wgsl  linear_burn.wgsl  multiply.wgsl  normal.wgsl  overlay.wgsl  saturation.wgsl  screen.wgsl  soft_light.wgsl  value.wgsl
shaders/filters/: kernel.wgsl
shaders/tools/: brush.wgsl  brush_new.wgsl
src/: app.rs  device.rs  kernel.rs  main.rs
src/filters/: kernel.rs
src/shaders/: kernel.rs
src/workspace/: layer_info.rs  mod.rs  workspace_serialization.rs
src/workspace/tools/: brush.rs  brush_new.rs  mod.rs  select.rs
