[package]
name = "joyful_create"
version = "0.0.4"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Photo editing software. Designed to function like GIMP or PhotoShop, although still indev"
# build_local.rs on `cargo r` or `cargo b`, build_install.rs on `cargo install`
build = "build_local.rs"

[dependencies]
image = { version = "0.25.4", default-features = false, features = ["jpeg", "png"] }
wgpu = { version = "22.1.0", features = ["spirv"] }
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
bytemuck = "1.18.0"
egui = "0.29.1"
egui-wgpu = "0.29.1"
eframe = { version = "0.29.1", features = ["wgpu"] }
serde = { version = "1.0.214", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
naga = { version = "23.0.0", features = ["wgsl-in", "spv-out"] }

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = 3
overflow-checks = false
